logs/Slang/generated/hdlconv/hdlconvertor_p719.sv.log
name: hdlconvertor_p719
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:4:1: error: expected member
nand g1b (nq1, d, clr, q1);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:5:1: error: expected member
nand g1a (q1, ck, nq2, nq1);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:6:1: error: expected member
nand g2b (nq2, ck, clr, q2);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:7:1: error: expected member
nand g2a (q2, nq1, pr, nq2);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:8:1: error: expected member
nand g3a (q, nq2, clr, nq);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:9:1: error: expected member
nand g3b (nq, q1, pr, q);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:16:1: error: expected member
nand g1b (nq1, d, clr, q1);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:17:1: error: expected member
nand g1a (q1, ck, nq2, nq1);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:22:1: error: expected member
nand g2b (nq2, ck, clr, q2);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:23:1: error: expected member
nand g2a (q2, nq1, pr, nq2);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:27:1: error: expected member
nand g3a (q, nq2, clr, nq);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p719.sv:28:1: error: expected member
nand g3b (nq, q1, pr, q);
^~~~
